-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0, 5.8.0, 5.9.0
-
None
-
I76ba9a654645a63651c6b3e15431369ec52d90de
In our documentation, we have parts of the documentation within the source files, and parts are in another folder "doc". The issue we are now (unfortunately we cannot really say when it started, but we tested it back to qdoc of Qt 5.7.) facing, is that the types used in our code examples from the "doc" folder are no longer automatically linked. It still works for the code examples used in the documentation at the source files. Manual linking works fine in the "doc" folder.
The doc folder contains only files with the *.qdoc extension, which seem to fail at auto linking the code blocks. All *.qml files work. All folders are added to the sourcedirs property in the config and are generated correctly, apart from the failing auto linking.
Example Code:
\qml
Item { // <-- this type should be linked automatically
// ...
}
\endqml
Our project structure:
root - /qml // <-- source files here, they work - /doc -- /config -- /src // <-- no auto linking in here
The issue possibly appeared when switching from qdoc Qt 5.3 to the latest version. There have been no changes to the config in the meantime. Is it by any chance possible that the latest qdoc requires the "doc" folder to be a subfolder of the "qml" folder, at least I saw this as the suggested structure?
UPDATE: It indeed works with the qdoc from Qt 5.3., but not with Qt 5.7. and above. But using Qt 5.3 is not an option, as we are making use of newer qdoc features.