qdoc: Improve linking of QML types

QML types and QML basic types were not autolinked correctly in many
instances.

- Provide correct context (genus) for code quote commands. This
  guarantees that the types resolve correctly for a \qml snippet
  even if there are colliding C++ target names.

  Note: we do not enforce 'CPP' genus for \code command, as
  it is commonly used also with QML code.

- Similarly for examples, each .qml source file is set to have QML
  genus.

- Remove QML basic types from the hard-coded map for known (C++)
  types/keywords. This prevented linking to these types.

Task-number: QTBUG-62440
Change-Id: I578d8d4675e99cb4ba54171031efd8dc93040160
Reviewed-by: Martin Smith <martin.smith@qt.io>